bk_ida/gccida/g0/legitimize_pic_address
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5468:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5470:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5471:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5474:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5475:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5476:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5478:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5481:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5482:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5483:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5484:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5486:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5487:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5494:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5495:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5629:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op1 = ( rtx)addr[1]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5659:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
newm = ( rtx)newm[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/i386.c:5672:34: error: use of undeclared identifier 'machine_mode'
newj = gen_rtx_fmt_Ei( UNSPEC, ( machine_mode)v24, v23, 7); 
                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimize_pic_address/src/obj/i386.o] Error 1
